objects/boxmigrate__Box_Staging_Summary__c.object
<CustomObject>
    <fields>
        <fullName>boxmigrate__Create_FRUP_Entry_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create FRUP Entry Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Create_FRUP_Entry_Total__c</fullName>
        <label>Create FRUP Entry Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Create_FRUP_Entry_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Create_Subfolder_Ids_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Subfolder Ids Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Create_Subfolder_Ids_Total__c</fullName>
        <label>Create Subfolder Ids Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Folders_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Folders Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Folders_Total__c</fullName>
        <label>Get Folders Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Get_Folder_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Parent_Id_Total__c</fullName>
        <label>Get Parent Id Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Get_Parent_Id_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Parent_Ids_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Parent Ids Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Prefix_Subfolder_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Prefix Subfolder Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Prefix_Subfolder_Total__c</fullName>
        <label>Get Prefix Subfolder Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Get_Prefix_Subfolder_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_SFProperties_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get SF Properties Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_SFProperties_Total__c</fullName>
        <label>Get SFProperties Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Get_SFProperties_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_SubFolder_Names_Total__c</fullName>
        <label>Get SubFolder Names Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Subfolder_Ids_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Subfolder Ids Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Subfolder_Ids_Total__c</fullName>
        <label>Get Subfolder Ids Total</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Get_Subfolder_Names_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Subfolder Names Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Move_Folder_Total__c</fullName>
        <label>Move Folder Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Move_Folder_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Move_Folders_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move Folders Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Process_Name__c</fullName>
        <label>Process Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>boxmigrate__Total_Count__c</fullName>
        <label>Total Count</label>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Update_Record_Folder_Id_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Record Folder Id Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boxmigrate__Update_Record_Folder_Id_Total__c</fullName>
        <label>Update Record Folder Id Total</label>
        <summaryFilterItems>
            <field>boxmigrate__Box_Staging_Object__c.boxmigrate__Update_SFRecord_Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>boxmigrate__Box_Staging_Object__c.boxmigrate__Box_Staging_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Box Staging Summary</label>
    <listViews>
        <fullName>boxmigrate__All</fullName>
        <columns>NAME</columns>
        <columns>boxmigrate__Process_Name__c</columns>
        <columns>boxmigrate__Total_Count__c</columns>
        <columns>boxmigrate__Get_Folders_Complete__c</columns>
        <columns>boxmigrate__Get_SFProperties_Complete__c</columns>
        <columns>boxmigrate__Move_Folders_Complete__c</columns>
        <columns>boxmigrate__Create_FRUP_Entry_Complete__c</columns>
        <columns>boxmigrate__Update_Record_Folder_Id_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Staging Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>